# AWS-CICD-check

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.github/workflows/: ci.yml
connection/: __init__.py  aws_config.py
dynamodb_service/: __init__.py  dynamodb_operations.py
s3_service/: __init__.py  s3_operations.py
tests/: test_aws_config.py  test_dynamodb_operations.py  test_s3_operations.py
